# wgpu_data_generator

./: Cargo.toml  notes.md  sample_config.toml
src/: application.rs  camera.rs  config.rs  degradation.rs  generator.rs  gltf_model.rs  landmark.rs  lighting.rs  main.rs  model.rs  offscreen.rs  resource.rs  shader.wgsl  texture.rs
src/shaders/: face.wgsl
