[package]
name = "synthetic_data_generator_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.10"
log = "0.4.32"
pollster = "0.4.0"
tobj = { version = "4.0.4", features = ["async"], default-features = false}
wgpu = {version = "29.0.3", features = ["trace"]}
winit = "0.30.13"

[dependencies.image]
version = "0.25.10"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.102"
fs_extra = "1.3.0"
glob = "0.3.3"
